# OtusIP

./: .travis.yml  CMakeLists.txt
src/: ip_utils.cpp  ip_utils.h  main.cpp  version.h
tests/: main_tests.cpp
tmpl/: version.h.in
